--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": "^7.2",
-        "illuminate/support": "~5|~6"
+        "illuminate/support": "~5|~6|~7"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
